--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "gatsby": "^2.13.45",
+    "gatsby-plugin-netlify-cms": "^4.1.6",
+    "netlify-cms-app": "^2.9.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
